<resources>

    <string name="app_name">OKAS</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="ENTER_EMAIL">ENTER EMAIL</string>
    <string name="enter_password">ENTER PASSWORD</string>
    <string name="your_room_no">Your room no.</string>
    <string name="status">STATUS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_room">RoomActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open_another_room">Open another room</string>
    <string name="your_room">Your Room</string>
    <string name="current_status">Current status:</string>
    <string name="change_status">Change status</string>
    <string name="see_owners_of_room">SEE OWNERS OF ROOM</string>
    <string name="send_notification_to">SEND NOTIFICATION TO</string>
    <string name="send_notification">SEND NOTIFICATION</string>
    <string name="enter_local_part">ENTER LOCAL PART</string>
    <string name="enter_domain">ENTER DOMAIN</string>
    <string name="sharedkey">share</string>
    <string name="sending_message">Sending message</string>
    <string name="open_over_internet">Open Over Internet</string>

</resources>
