<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp"
        android:background="#6200ee"
        android:padding="2dp"
        android:textColor="#ffffff"
        android:text="@string/register"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/Edtext_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="50dp"
        android:hint="@string/ENTER_EMAIL"

        />
    <EditText
        android:id="@+id/Edtext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_margin="15dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/Btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="get registered"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/Text_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="All ready registered ? click here ."
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>