<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
        android:layout_marginTop="140dp"
        android:background="#6200ee"
        android:padding="2dp"
        android:textColor="#ffffff"
        android:text="@string/login"
        android:textSize="30sp" />
    <EditText
        android:id="@+id/Edtext_loginemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="50dp"
        android:hint="@string/ENTER_EMAIL"

        />
    <EditText
        android:id="@+id/Edtext_loginpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_margin="15dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/Btn_Signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SIGN IN"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/Text_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NOT HAVE AN ACCOUNT ? SIGN IN HERE>"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"/>




</LinearLayout>