<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".RoomActivity"
    tools:showIn="@layout/app_bar_room"
    android:id="@+id/fragment_container"
    >

    <TextView
        android:id="@+id/txtview_your_room"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="24sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"
        android:text="@string/your_room"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        />


    <TextView
        android:id="@+id/txtview_room_no"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtview_current_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:background="@color/colorPrimary"
        android:text="@string/current_status"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed" />
      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
         >

          <TextView
              android:id="@+id/txtview_status"
              android:layout_width="154dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:layout_marginStart="127dp"
              android:layout_marginTop="20dp"
              android:textSize="24sp" />

          <Button
              android:id="@+id/btn_refresh"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/ic_refresh"
              />

      </LinearLayout>
    <Button
        android:id="@+id/btn_change_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/change_status"/>
    <Button
        android:id="@+id/Btn_open_another_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/open_another_room"
        />

</LinearLayout>